<resources>
    <string name="app_name">Study Room</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="default_web_client_id">988490473841-tec1psq7bd8q2phtlnif92e2mspct0gl.apps.googleusercontent.com</string>
    <string name="hero_text_boarding_screen">
        Welcome to StudyRoom - your digital learning hub. Join or create study rooms to organize your classes, stay informed with real-time announcements, and never miss important course materials. Start building your learning community today.
    </string>
    <string name="title_activity_create_room">CreateRoomActivity</string>
    <string name="title_activity_join_room">JoinRoomActivity</string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">

    </string>
    <string name="continue_with_chapter">Continue with chapter</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="app_logo">App Logo</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Dont\' have an account ?</string>
    <string name="signup"> Signup</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sigin_in">Sigin In</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="rooms">Rooms</string>
    <string name="announcements">Announcements</string>
    <string name="create_announcements">Create Announcements</string>
    <string name="settings">Settings</string>
    <string name="room_icon">Room Icon</string>
    <string name="room_code">Room Code</string>
    <string name="enter_room_code">Enter room code</string>
    <string name="room_title">Room Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="join_room">Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="room_code_pattern">Enter 6-character room code</string>
    <string name="auto_generated">(auto generated)</string>
    <string name="action_post">Post</string>

</resources>