<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.fragment.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_back"
        android:textColor="@color/logo_secondary"
        android:textSize="14sp" />

    <TextView
        style="@style/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/inputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        style="@style/inputTextLayout"
        android:hint="@string/password"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/primaryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:gravity="center_vertical">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/or" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleAuth"
        style="@style/secondaryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_google"
        android:textSize="14sp"
        app:icon="@drawable/icon_google"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/btnPadding"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add" />

    <LinearLayout
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/btnPadding"
        android:textColor="@color/text_secondary">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/text_secondary"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/signup"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>